...
            "state": "translated",
            "value": "Ghi chú cũng đến các máy chủ khác"
          }
        }
      }
    },
    "노트로 인용": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Quote in a note"
          }
...
            "state": "translated",
            "value": "Đọc tiếp sang phần sau %lld phần trăm"
          }
        }
      }
    },
    "닫기": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Close"
          }
...
            "state": "translated",
            "value": "Trả lời"
          }
        }
      }
    },
    "답글 보내기": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Send reply"
          }
...
            "state": "translated",
            "value": "Bình luận được đăng bằng tài khoản kurl của bạn."
          }
        }
      }
    },
    "댓글을 남겨보세요": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Leave a comment"
          }
...
            "state": "translated",
            "value": "Mọi người"
          }
        }
      }
    },
    "모두 읽음": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Mark all read"
          }
...
            "state": "translated",
            "value": "Tự động đăng vào thời điểm đã chọn."
          }
        }
      }
    },
    "설정": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
          }
...
            "state": "translated",
            "value": "Người dùng không xác định"
          }
        }
      }
    },
    "알겠어요, 올릴게요": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Got it, post"
          }
...
            "state": "translated",
            "value": "Đã hiểu, đăng"
          }
        }
      }
    },
    "알림": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Notifications"
          }
...
            "state": "translated",
            "value": "Ứng dụng"
          }
        }
      }
    },
    "어디에 남길까요?": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Where to save?"
          }
...
            "state": "translated",
            "value": "Mẹo"
          }
        }
      }
    },
    "팔로우": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Follow"
          }
...
            "state": "translated",
            "value": "Không thể xóa bộ lọc"
          }
        }
      }
    },
    "하이라이트": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Highlights"
          }
...
            "state": "translated",
            "value": "Ghi chú của bạn"
          }
        }
      }
    },
    "대화": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Conversations"
          }
...
